# fraud-detection-system

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  mlflow.db  prometheus.yml  pyproject.toml
notebooks/: 01_exploration_and_design.ipynb
src/: config.py
src/api/: app.py  schemas.py
src/models/: train.py  train_challenger.py
src/processing/: features.py
src/utils/: logger.py
