[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.66.1",
    "notebook>=7.5.2",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
]
