[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "Real-time Fraud Detection System with MLOps pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc",
    "notebook",
    "numpy",
    "pandas",
    "pydantic-settings",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "mlflow",
    "colorlog>=6.10.1",
    "python-json-logger>=4.0.0",
    "xgboost>=3.1.3",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]
